--- a/BlockchainMoviesApp.xcodeproj/xcshareddata/xcschemes/BlockchainMoviesApp.xcscheme
+++ b/BlockchainMoviesApp.xcodeproj/xcshareddata/xcschemes/BlockchainMoviesApp.xcscheme
@@ -27,13 +27,42 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:BlockchainMoviesApp.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E8DFD92F2BCA127E00D2A107"
+               BuildableName = "BlockchainMoviesAppTests.xctest"
+               BlueprintName = "BlockchainMoviesAppTests"
+               ReferencedContainer = "container:BlockchainMoviesApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E8DFD93C2BCA12B300D2A107"
+               BuildableName = "BlockchainMoviesAppAutomationTests.xctest"
+               BlueprintName = "BlockchainMoviesAppAutomationTests"
+               ReferencedContainer = "container:BlockchainMoviesApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
